Fixed contacts layout with overflow hidden

--- a/browser/components/loop/content/css/contacts.css
+++ b/browser/components/loop/content/css/contacts.css
@@ -11,12 +11,14 @@ html {
   flex: 2;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .contact-list-container {
   flex: 2;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 /* Don't show the Gravatar if we're showing a contacts list. */
 /*.contact-list-container ~ .contacts-gravatar-promo {*/
@@ -56,7 +58,7 @@ html {
 }
 
 .contact-filter-container {
-  /*display: flex;*/
+  display: flex;
   height: 2em;
 }
 
@@ -73,8 +75,6 @@ html {
   background-repeat: no-repeat;
   color: #999;
   font-size: 1.2rem;
-  /*flex: 2 1 auto;*/
-  /*align-self: stretch;*/
 }
 
 html[dir="rtl"] .contact-filter {
